force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/Cloudrop__Bulk_Email_Statistic__c.object-meta.xml
<CustomObject>
    <label>MassMailer Outreach</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer Outreaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>