force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__AB_Testing_Subject__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__AB_Testing_Subject__c</fullName>
    <label>AB Testing Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>