force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Activity_Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Activity_Related_To_ID__c</fullName>
    <label>Activity Related To ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>