force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Additional_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Additional_To_Addresses__c</fullName>
    <label>Additional To Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>