force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Additional_To_Names__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Additional_To_Names__c</fullName>
    <label>Additional To Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>