force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Alternate_Email_Preview_Text__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Alternate_Email_Preview_Text__c</fullName>
    <label>Alternate Email Preview Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>