force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__BCC_Each_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__BCC_Each_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCC Each Email</label>
    <type>Checkbox</type>
</CustomField>