force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__BCC_Sender__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__BCC_Sender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCC Sender</label>
    <type>Checkbox</type>
</CustomField>