force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>MassMailer Outreaches</relationshipLabel>
    <relationshipName>MassMailer_Email_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>