force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__CC_Fields__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__CC_Fields__c</fullName>
    <label>CC Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>