force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Channel__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Channel__c</fullName>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>