force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Cron_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Cron_Id__c</fullName>
    <label>Cron Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>