force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Drop_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Drop_Rate__c</fullName>
    <formula>if(Cloudrop__Requests__c != 0, (Cloudrop__Bounce_Drops__c +  Cloudrop__Spam_Drop__c)   / Cloudrop__Requests__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>