force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Dynamic_Email_Data__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Dynamic_Email_Data__c</fullName>
    <label>Dynamic Email Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>