force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Body__c</fullName>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>