force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Field__c</fullName>
    <label>Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>