force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <type>TextArea</type>
</CustomField>