force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Email_Type_Option__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Type_Option__c</fullName>
    <label>Email Type Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Non-Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>