force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Emails_Sent_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Emails_Sent_to_Process__c</fullName>
    <label>Emails Sent to Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>