force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Error__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>