force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>