force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__FieldsToLinkStatus__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__FieldsToLinkStatus__c</fullName>
    <label>FieldsToLinkStatus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>