force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Files_List__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Files_List__c</fullName>
    <label>Files List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>