force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__From_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Email__c</fullName>
    <label>From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>