force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__From_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Name__c</fullName>
    <label>From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>