force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__From_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Record_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Record Owner</label>
    <type>Checkbox</type>
</CustomField>