force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Get_Statistics_from_SendGrid__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Get_Statistics_from_SendGrid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Statistics from SendGrid</label>
    <type>Checkbox</type>
</CustomField>