force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Included_In_Email_Stats__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Included_In_Email_Stats__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included In Email Stats</label>
    <type>Checkbox</type>
</CustomField>