force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Invalid_Email__c</fullName>
    <label>Invalid Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>