force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Job_Finished__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Job_Finished__c</fullName>
    <label>Job Finished</label>
    <type>DateTime</type>
</CustomField>