force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__ListViewId__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ListViewId__c</fullName>
    <label>ListViewId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>