force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__MassMailer_Outreach_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Outreach_Name__c</fullName>
    <label>MassMailer Outreach Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>