force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Medium__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Medium__c</fullName>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SendGrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>