force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Merge_Field_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Merge_Field_Record_Ids__c</fullName>
    <label>Merge Field Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>