force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Object__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>