force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>