force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Outreach_Processed__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Outreach_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outreach Processed</label>
    <type>Checkbox</type>
</CustomField>