force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Query__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>