force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Related_To__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Related_To__c</fullName>
    <formula>IF( ISBLANK(Cloudrop__Related_Record_Id__c ),&apos;&apos;, HYPERLINK(&apos;/&apos; &amp; Cloudrop__Related_Record_Id__c ,&apos;Record Link&apos;, &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>