force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Repeat_Spamreports__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Repeat_Spamreports__c</fullName>
    <label>Repeat Spamreports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>