force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Repeat_Unsubscribes__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Repeat_Unsubscribes__c</fullName>
    <label>Unsubscribe drops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>