force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Reply_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Reply_To_Email__c</fullName>
    <label>Reply To Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>