force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Resend_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Resend_Outreach__c</fullName>
    <inlineHelpText>It contains the original outreach Id</inlineHelpText>
    <label>Relaunched Outreach</label>
    <length>25</length>
    <type>Text</type>
</CustomField>