force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__ResendToUndeliver__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__ResendToUndeliver__c</fullName>
    <label>Resend Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>