force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Sender_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Sender_Wrapper__c</fullName>
    <label>Sender Wrapper</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>