force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Sent_From_Flow__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Sent_From_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent From Flow</label>
    <type>Checkbox</type>
</CustomField>