force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__SF_List_View_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__SF_List_View_Name__c</fullName>
    <label>SF List View Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>