force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Spam_Reports__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Spam_Reports__c</fullName>
    <label>Spam Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>