force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>