force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppress_Activity_Logging__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Activity_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Activity Logging</label>
    <type>Checkbox</type>
</CustomField>