force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppress_Click_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Click_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Click Tracking</label>
    <type>Checkbox</type>
</CustomField>