force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppress_Email_Event_Logging_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Email_Event_Logging_Statuses__c</fullName>
    <label>Suppress Email Event Logging Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>dropped</fullName>
                <label>Dropped</label>
            </value>
            <value>
                <fullName>spamreport</fullName>
                <label>Spam Report</label>
            </value>
            <value>
                <fullName>bounce</fullName>
                <label>Bounce</label>
            </value>
            <value>
                <fullName>unsubscribe</fullName>
                <label>Unsubscribe</label>
            </value>
            <value>
                <fullName>open</fullName>
                <label>Open,</label>
            </value>
            <value>
                <fullName>click</fullName>
                <label>Click</label>
            </value>
            <value>
                <fullName>processed</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>deferred</fullName>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>group_unsubscribe</fullName>
                <label>Group Unsubscribe</label>
            </value>
            <value>
                <fullName>group_resubscribe</fullName>
                <label>Group Resubscribe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>