force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppress_Tracking_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Tracking_Statuses__c</fullName>
    <label>Suppress Tracking Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>