force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppress_Unsubscribe_Link__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppress_Unsubscribe_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Unsubscribe Link</label>
    <type>Checkbox</type>
</CustomField>