force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Suppression_List_View_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Suppression_List_View_Id__c</fullName>
    <description>let the users select a MassMailer List View which would be used as the suppression list at run time.</description>
    <label>Excluded List View Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>