force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Synced_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Synced_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced Status</label>
    <type>Checkbox</type>
</CustomField>