force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Template_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Template_Folder_Name__c</fullName>
    <label>Template Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>