force-app/main/default/objects/Cloudrop__Bulk_Email_Statistic__c/fields/Cloudrop__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Template_Name__c</fullName>
    <label>Template Name</label>
    <type>TextArea</type>
</CustomField>